# together

./: CMakeLists.txt
src/: main.cpp
src/components/: attack.hpp  defense.hpp  health.hpp  inventory.hpp  position.hpp
src/core/: action.hpp  actor.hpp  component.hpp  input.hpp  item.hpp
